# active_inverse_Stackelberg

./: .gitignore  README.md
ActiveInverseStackelberg.jl/: Project.toml
ActiveInverseStackelberg.jl/src/: ActiveInverseStackelberg.jl  communication.jl  costs.jl  dynamic_programming.jl  dynamics.jl  params.jl  plot_utils.jl  run.jl  solve.jl  spline.jl  types.jl
active_inverse_stackelberg_ros/: CMakeLists.txt  package.xml
active_inverse_stackelberg_ros/launch/: gazebo.launch  tb_sim.launch
active_inverse_stackelberg_ros/src/: controller.cpp  trajectory_generator.cpp
matlab/: dynprop.m  main.m  readme.md  vol.m
matlab/potter/: dynprop.m  main.m  vol.m
